[package]
name = "cosmoteer_mod_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
open = "3.2.0"
question = "0.2.2"
ron = "0.8.0"
