[package]
name = "cosmoteer_mod_helper"
version = "1.0.1"
edition = "2021"
description = "Simple tool to help players sync mods"
license-file = "LICENSE"
homepage = "https://github.com/hardliner66/cosmoteer_mod_helper"
repository = "https://github.com/hardliner66/cosmoteer_mod_helper"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
directories = "4.0.1"
open = "3.2.0"
question = "0.2.2"
ron = "0.8.0"
